# docker-python-poetry-django

./: README.md  pyproject.toml
