
[tool.poetry]
name = "docker-python-poetry-django"
version = "0.1.0"
description = "Example project that demonstrates Docker, Python, Poetry, and Django"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4"
django-compressor = "^4"
whitenoise = "^6"
psycopg2-binary = "^3"
gunicorn = "^20"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-django = "^4"
poethepoet = "^0"
black = "^22"
isort = "^5"
ruff = "^0"
pywatchman = "^1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poe.tasks]
r = "./manage.py runserver 0:8000"
m = "./manage.py"
mm = "./manage.py makemigrations"
mi = "./manage.py migrate"
md = ["mm", "mi"]
t = "pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
